After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712300 - gst-launch: exits with 0 error code even after an error occurred
gst-launch: exits with 0 error code even after an error occurred
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other Linux
: Normal trivial
: 1.2.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-11-14 14:32 UTC by Philippe Normand
Modified: 2013-11-26 11:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gst-launch: exit an error code when the pipeline failed to pre-roll (1.05 KB, patch)
2013-11-14 14:34 UTC, Philippe Normand
needs-work Details | Review
gst-launch: exit with an error code when an error occured (1.66 KB, patch)
2013-11-21 14:41 UTC, Philippe Normand
committed Details | Review

Description Philippe Normand 2013-11-14 14:32:29 UTC
In case of fatal errors like a pipeline refusing to pre-roll, it would be nice to return an exit code.

This would be quite helpful especially when git bisecting :) I'll attach a simple patch.
Comment 1 Philippe Normand 2013-11-14 14:34:11 UTC
Created attachment 259806 [details] [review]
gst-launch: exit an error code when the pipeline failed to pre-roll
Comment 2 Sebastian Dröge (slomo) 2013-11-20 20:12:38 UTC
Comment on attachment 259806 [details] [review]
gst-launch: exit an error code when the pipeline failed to pre-roll

Generally makes sense, but there seem to be more places of caught_error=... that don't propagate into res!=0. Could you add those too? :)
Comment 3 Philippe Normand 2013-11-21 14:41:57 UTC
Created attachment 260449 [details] [review]
gst-launch: exit with an error code when an error occured

If the pipeline failed to pre-roll or the user interrupted the
execution then set the exit code to a positive value.
Comment 4 Sebastian Dröge (slomo) 2013-11-25 11:12:55 UTC
commit 6e4cab65418bb5b16fe6ae31b3d79e5d535cbff5
Author: Philippe Normand <philn@igalia.com>
Date:   Thu Nov 14 15:32:59 2013 +0100

    gst-launch: exit with an error code when an error occured
    
    If the pipeline failed to pre-roll or the user interrupted the
    execution then set the exit code to a positive value.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=712300